# precise-parallel-fp

./: .gitignore  CMakeLists.txt  README.md  experiment1.sh  main.c  par_precise_fp.c  pfpdefs.c.c
capps/: CMakeLists.txt  \  experiment1.sh  experiment_batch_mts.sh  main.c  main.cpp  makegraphs.py  par_precise_fp.cpp  par_precise_fp.h  par_precise_fp.hpp  pfpdefs.cpp  pfpdefs.hpp  sess.vim  test_mts.cpp  test_mts.h  test_poly.cpp  test_poly.h  test_poly_multicore.cpp  test_poly_multicore.h
capps/Plots/: bellman_ford.csv  draw_bellman_ford.py  draw_parallel_mss.py  draw_plot1.py  draw_plot2.py  draw_plot3.py  draw_plot4.py  draw_reductions.py  draw_sequential_mps.py  draw_sequential_mps_alt.py  hist_sequential_mps_alt.py  lazympsseq.csv  lazympsseqalt.csv  mss_hybrid.csv  parallel_mss.csv  plot1.csv  plot2.csv  plot3.csv  plot4.csv  reductions.csv  reductions_superacc.csv
capps/Plots/csv/: lazympsseqalt.csv  lazyviterbi.csv  mss16.csv  mss162.csv  mss_hybrid.csv  mss_hybrid_final.csv  mss_hybrid_final_with_recomp.csv  optimal_depth.csv  steep16.csv  steep162.csv  steep_hybrid.csv
capps/Plots/python/: draw_bellman_ford.py  draw_plot3.py  draw_reductions.py  draw_reductions_superacc.py  draw_sequential_mps.py  draw_sequential_mss.py  hist_bellman_ford.py  hist_sequential_mps_alt.py  hist_viterbi.py  hybrid_mss.py  hybrid_mss_with_recomp.py  hybrid_steep.py  optimal_depth.py
capps/Precise-parallel-fp/: Precise-parallel-fp.amplxeproj
capps/Precise-parallel-fp/r000hs/: r000hs.amplxe
capps/Precise-parallel-fp/r000hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
capps/Precise-parallel-fp/r000hs/data.0/: 29651-29656.0-29656.0.th  29651-29656.0-29656.0.th.aux  29651-29656.0-29672.0.th  29651-29656.0-29672.0.th.aux  29651-29656.0-29673.0.th  29651-29656.0-29673.0.th.aux  29651-29656.0-29674.0.th  29651-29656.0-29674.0.th.aux  29651-29656.0-29675.0.th  29651-29656.0-29675.0.th.aux  29651-29656.0-29676.0.th  29651-29656.0-29676.0.th.aux  29651-29656.0-29677.0.th  29651-29656.0-29677.0.th.aux  29651-29656.0-29678.0.th  29651-29656.0-29678.0.th.aux  29651-29656.0.trace  systemcollector-29651-toe.sc  userapicollector-29656-d27b5bea-29656-d27e1349.th  userapicollector-29656-d27b5bea-29671-d288a4c4.th  userapicollector-29656-d27b5bea-29672-d2eb6ae7.th  userapicollector-29656-d27b5bea-29673-d300f0ef.th  userapicollector-29656-d27b5bea-29674-d311535b.th  userapicollector-29656-d27b5bea-29675-d30b9fde.th  userapicollector-29656-d27b5bea-29676-d319aee3.th  userapicollector-29656-d27b5bea-29677-d31fc9d8.th  userapicollector-29656-d27b5bea-29678-d3286d61.th  userapicollector-29656-d27b5bea.trace
capps/Precise-parallel-fp/r000hs/sqlite-db/: dicer.db
capps/Precise-parallel-fp/r001hs/: r001hs.amplxe
capps/Precise-parallel-fp/r001hs/config/: context_values.cfg  log.cfg  runss.options
capps/Precise-parallel-fp/r001hs/data.0/: 30876-30881.0-30881.0.th  (+27 more)
capps/Precise-parallel-fp/r002hs/: r002hs.amplxe
capps/Precise-parallel-fp/r003hs/: r003hs.amplxe
capps/Precise-parallel-fp/r004ah/: r004ah.amplxe
capps/Precise-parallel-fp/r005ah/: r005ah.amplxe
capps/Precise-parallel-fp/r006ah/: r006ah.amplxe
capps/Precise-parallel-fp/r007ah/: r007ah.amplxe
capps/Precise-parallel-fp/r008ah/: r008ah.amplxe
capps/Precise-parallel-fp/r009hs/: r009hs.amplxe
capps/exblas/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
capps/exblas/include/: ExMTS.hpp  ExMTS_FPE.hpp  FPE.hpp  blas1.hpp  common.hpp  config.h  superaccumulator.hpp
capps/exblas/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
capps/exblas/tests/: test.exmts.cpu.cpp  test.exsum.cpu.cpp
capps/include/: .~lock.2_lazy_mps_implementations.hpp#  2_lazy_mps_implementations.hpp  CMakeLists.txt  interval_arithmetic.hpp  lazy_mps_implementations.hpp  par_int_arith_mps.hpp  par_lazy_mps.hpp  parallel_mps.hpp  parallel_mss.hpp  precise_mps_implementations.hpp  sequential_mps.hpp  sequential_mss.hpp  sequential_mts.hpp
capps/include/Common/: debug.hpp  interval_arithmetic.hpp  printFunctions.hpp  struct.hpp  summation.hpp
capps/include/Graphs/: bellman_ford.hpp
capps/include/Mps/: 2_lazy_mps_implementations.hpp  interval_arithmetic.hpp  lazy_mps_implementations.hpp  parallel_mps.hpp  sequential_mps.hpp  sequential_mps_alt.hpp
capps/include/Mss/: parallel_mss.hpp  sequential_mss.hpp
capps/include/Mts/: sequential_mts.hpp
capps/include/Steep/: parallel_steep.hpp
capps/include/Victor/: pfpdefs.hpp  test_mts.hpp
capps/include/Viterbi/: sequential_viterbi.hpp
capps/src/: .~lock.lazy_mps_implementations.cpp#  2_lazy_mps_implementations.cpp  CMakeLists.txt  interval_arithmetic.cpp  lazy_mps_implementations.cpp  main.cpp  mpfrSum.cpp  par_int_arith_mps.cpp  par_lazy_mps.cpp  parallel_mps.cpp  parallel_mss.cpp  precise_mps_implementations.cpp  sequential_mps.cpp  sum.cpp  test_lazy.cpp  test_lazy_mps.cpp  test_mts.cpp
capps/src/Common/: interval_arithmetic.cpp  printFunctions.cpp  summation.cpp
capps/src/Graphs/: CMakeLists.txt  Makefile  bellman_ford.cpp  boost_test.cpp  graph_test  test_graph.cpp
capps/src/Mps/: lazy_mps_implementations.cpp  parallel_mps.cpp  sequential_mps.cpp  sequential_mps_alt.cpp  sequential_mps_alternative.cpp  sequential_mts.cpp  test_mps.cpp
capps/src/Mss/: Makefile  parallel_mss.cpp  parallel_mss_hybrid.cpp  sequential_mss.cpp  test_mss.cpp
capps/src/Mts/: sequential_mts.cpp
capps/src/SmallTests/: CMakeLists.txt  Makefile  parallel_reduce.cpp  reductions.cpp  reductions_superacc.cpp
capps/src/Steep/: parallel_steep.cpp  parallel_steep_hybrid.cpp  test_steep.cpp
capps/src/Victor/: m_test_mts.csv  m_test_mts_errlog.csv  main.cpp  pfpdefs.cpp  sum.cpp  test_mts.cpp
capps/src/Viterbi/: sequential_viterbi.cpp  test_viterbi.cpp
capps/xsum_slacc/: Makefile-gcc-arm  Makefile-gcc-intel  Makefile-gcov  Makefile-solaris-sparc  README  pbinary.c  results-asusUX305CA-gcc5.4  run-tests  xsum-check  xsum-test.c  xsum-time  xsum-time-perm-zhu  xsum-time-perm.c  xsum-time-zhu  xsum-time.c
(+301 files in other folders)
